<resources>
    <string name="app_name">Motherless</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_search">Search</string>
    <string name="being_watching_now">Being watching now</string>
    <string name="popular_videos">Popular videos</string>
    <string name="most_favorited_videos">Most favorited videos</string>
    <string name="groups_featuring_this_video">Groups featuring this video</string>
    <string name="tags_for_this_video">Tags for this video</string>
    <string name="favorited">Favorited</string>
    <string name="galleries">Galleries</string>
    <string name="comments">Comments</string>
    <string name="player">Player</string>
    <string name="search">Search</string>
</resources>
