<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.sasfmlzr.motherless.view.CustomViewVideo
            android:id="@+id/being_videos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/being_watching_now"
            app:layout_constraintBottom_toTopOf="@id/favorited_videos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_home" />

        <com.sasfmlzr.motherless.view.CustomViewVideo
            android:id="@+id/favorited_videos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/most_favorited_videos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/being_videos" />

        <com.sasfmlzr.motherless.view.CustomViewVideo
            android:id="@+id/popular_videos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/popular_videos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/favorited_videos" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>